--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,9 +6,11 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/jquery.dynatable.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/highcharts.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.dynatable.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
