--- a/app/views/portfolio.scala.html
+++ b/app/views/portfolio.scala.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Foundation | Welcome</title>
-        <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+        <!--<link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">-->
     </head>
     <body>
         <div class="off-canvas-wrapper">
@@ -111,10 +111,10 @@
             </div>
         </div>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript"></script>
+        <!--<script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript"></script>
         <script>
                 $(document).foundation();
-        </script>
+        </script>-->
         <script src="@routes.Assets.at("javascripts/highcharts.js")" type="text/javascript"></script>
     </body>
 </html>
