--- a/app/views/portfolio.scala.html
+++ b/app/views/portfolio.scala.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
         <!--<script src="@routes.Assets.at("javascripts/foundation.min.js")" type="text/javascript"></script>
         <script>
                 $(document).foundation();
